--- a/data/readme
+++ b/data/readme
@@ -1,1 +1,1 @@
-Before performing this project, please remember to unzip the "data.zip" file.
+Please remember to unzip the file "data.zip" before performing this project, 
