--- a/data/readme
+++ b/data/readme
@@ -1,1 +1,1 @@
-Please remember to unzip the file "data.zip" before performing this project, 
+Please unzip the file, "data.zip", before running this program.
